View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026419 | Community | OCCT:Data Exchange | public | 2015-07-10 18:04 | 2015-12-13 13:29 |
Reporter | Roman Lygin | Assigned To | bugmaster | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026419: [Regression?] Export of a reversed face leads to crash in 6.9.0 although proceeded in 6.8.0 | ||||
Description | Apparently, #25632 (not available to community) had a side effect on export of reversed faces (at least on periodic surfaces). Due to changed surface ranges, Geom_BSplineSurface::CheckAndSegment() is called and it creates a weird surface (with too dense knots) leading further to a crash in VIso(). In 6.8.0 when face orientation was ignored (?) the Segment() was not applied with such values. Not excluded, that 0025971 can also have impact, however this has not been confirmed. | ||||
Steps To Reproduce | restore a-fwd.brep af brepiges af #OK restore a-rev.brep ar brepiges ar #exception | ||||
Tags | No tags attached. | ||||
Test case number | bugs iges bug26419_1, bug26419_2 | ||||
|
a.zip (16,307 bytes) |
|
Branch CR26419 has been created by ika. SHA-1: df8872bc7053fbc95489281385479a1e56328135 Detailed log of new commits: Author: ika Date: Tue Sep 1 16:12:11 2015 +0300 0026419: [Regression?] Export of a reversed face leads to crash in 6.9.0 although proceeded in 6.8.0 Fix a mistake with a center of pcurve mirror during writing reversed face into IGES. |
|
Dear GKA, Could you please review brach CR26419? |
|
Branch CR26419 is ready to be tested |
|
Branch CR26419 has been updated by mkv. SHA-1: 99b0e804f26ac1469d54a7a0c946e00b5cc65867 Detailed log of new commits: Author: mkv Date: Thu Sep 3 12:52:20 2015 +0300 Test cases for issue CR26419 |
|
Dear BugMaster, Branch CR26419 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: df8872bc7053fbc95489281385479a1e56328135 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26419-master-occt-64/Debian70-64/bugs/iges/bug26419_1.html http://occt-tests/CR26419-master-occt-64/Debian70-64/bugs/iges/bug26419_2.html bugs iges bug26419_1: OK http://occt-tests/CR26419-master-occt-64/Windows-64-VC10/bugs/iges/bug26419_1.html http://occt-tests/CR26419-master-occt-64/Windows-64-VC10/bugs/iges/bug26419_2.html bugs iges bug26419_2: OK Testing on Linux: occt component : Total MEMORY difference: 91628254 / 91196693 [+0.47%] Total CPU difference: 17794.449999998957 / 17162.359999999386 [+3.68%] products component : Total MEMORY difference: 25220174 / 25226546 [-0.03%] Total CPU difference: 7432.939999999989 / 7039.5099999999975 [+5.59%] Testing on Windows: occt component : Total MEMORY difference: 57049938 / 57042860 [+0.01%] Total CPU difference: 16098.850797099032 / 16075.793849298934 [+0.14%] products component : Total MEMORY difference: 16228606 / 16228570 [+0.00%] Total CPU difference: 5323.580925299964 / 5334.079792599963 [-0.20%] There are no differences in images found by testdiff. |
|
Branch CR26419 has been updated forcibly by ika. SHA-1: c0961e49d19ae793945acdd161ef691a11ab0d1e |
|
Fix center of pcurve mirror; fix updating of seam edge; change condition of using Segment during exporting periodic BSpline surfaces to IGES (if bounds are not in one period) in case of problems with such faces in Rhino and SolidWorks. Dear GKA, could you please review branch CR26419? |
|
Branch CR26419 has been updated by ika. SHA-1: 2865cf2693c882f2e80823573c4db0e054344187 Detailed log of new commits: Author: ika Date: Thu Sep 10 15:49:49 2015 +0300 0026419: [Regression?] Export of a reversed face leads to crash in 6.9.0 although proceeded in 6.8.0 add a comment |
|
Branch CR26419 has been updated forcibly by ika. SHA-1: 9cd0c8b6982bbf259607246d0f17cbc27a7d0c06 |
|
Branch CR26419 has been updated forcibly by ika. SHA-1: ad9f326eff499e793cd5cc8669199c6b5fe4e061 |
|
Branch CR26419 is ready to be tested |
|
Dear BugMaster, Branch CR26419 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms and tested on Release mode. SHA-1: ad9f326eff499e793cd5cc8669199c6b5fe4e061 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26419-master-occt-64/Debian70-64/bugs/iges/bug26419_1.html http://occt-tests/CR26419-master-occt-64/Debian70-64/bugs/iges/bug26419_2.html bugs iges bug26419_1: OK http://occt-tests/CR26419-master-occt-64/Windows-64-VC10/bugs/iges/bug26419_1.html http://occt-tests/CR26419-master-occt-64/Windows-64-VC10/bugs/iges/bug26419_2.html bugs iges bug26419_2: OK Testing on Linux: occt component : Total MEMORY difference: 92404702 / 92773212 [-0.40%] Total CPU difference: 18062.069999999003 / 17943.959999999086 [+0.66%] products component : Total MEMORY difference: 25889080 / 25884840 [+0.02%] Total CPU difference: 7507.669999999987 / 7187.509999999996 [+4.45%] Testing on Windows: occt component : Total MEMORY difference: 57761175 / 57753851 [+0.01%] Total CPU difference: 16643.809090398998 / 16847.780397899147 [-1.21%] products component : Total MEMORY difference: 16782681 / 16782651 [+0.00%] Total CPU difference: 5519.081378499974 / 5565.444875699965 [-0.83%] There are no differences in images found by testdiff. |
|
Branch CR26419 has been deleted by kgv. SHA-1: ad9f326eff499e793cd5cc8669199c6b5fe4e061 |
occt: master eeec0986 2015-09-08 13:20:42 Committer: bugmaster Details Diff |
0026419: [Regression?] Export of a reversed face leads to crash in 6.9.0 although proceeded in 6.8.0 Take basis surface from trimmed surfaces during IGES writing, because pcurves will be transformed, so trim will be shifted, accorded to new face bounds, fix updating of seam edge, change condition of using Segment during exporting periodic BSpline surfaces to IGES (if bounds are not in one period). Test cases for issue CR26419 |
Affected Issues 0026419 |
|
mod - src/BRepToIGES/BRepToIGES_BRShell.cxx | Diff File | ||
mod - src/GeomToIGES/GeomToIGES_GeomSurface.cxx | Diff File | ||
mod - src/IGESFile/liriges.c | Diff File | ||
add - tests/bugs/iges/bug26419_1 | Diff File | ||
add - tests/bugs/iges/bug26419_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-10 18:04 | Roman Lygin | New Issue | |
2015-07-10 18:04 | Roman Lygin | Assigned To | => gka |
2015-07-10 18:04 | Roman Lygin | File Added: a.zip | |
2015-08-20 15:46 |
|
Assigned To | gka => ika |
2015-08-20 15:46 |
|
Status | new => assigned |
2015-09-01 16:13 | git | Note Added: 0044939 | |
2015-09-01 16:14 | ika | Note Added: 0044940 | |
2015-09-01 16:14 | ika | Assigned To | ika => gka |
2015-09-01 16:14 | ika | Status | assigned => resolved |
2015-09-02 16:18 |
|
Note Added: 0044968 | |
2015-09-02 16:18 |
|
Assigned To | gka => bugmaster |
2015-09-02 16:18 |
|
Status | resolved => reviewed |
2015-09-02 17:03 |
|
Assigned To | bugmaster => mkv |
2015-09-03 12:53 | git | Note Added: 0044997 | |
2015-09-03 12:53 |
|
Note Added: 0044998 | |
2015-09-03 12:53 |
|
Assigned To | mkv => bugmaster |
2015-09-03 12:53 |
|
Status | reviewed => tested |
2015-09-03 12:54 |
|
Test case number | => bugs iges bug26419_1, bug26419_2 |
2015-09-04 13:03 | bugmaster | Assigned To | bugmaster => ika |
2015-09-04 13:03 | bugmaster | Status | tested => assigned |
2015-09-08 16:39 | git | Note Added: 0045250 | |
2015-09-08 16:44 | ika | Note Added: 0045251 | |
2015-09-08 16:44 | ika | Assigned To | ika => gka |
2015-09-08 16:44 | ika | Status | assigned => resolved |
2015-09-10 15:50 | git | Note Added: 0045433 | |
2015-09-14 14:21 | git | Note Added: 0045569 | |
2015-09-14 14:48 | git | Note Added: 0045574 | |
2015-09-14 15:06 |
|
Note Added: 0045583 | |
2015-09-14 15:06 |
|
Assigned To | gka => bugmaster |
2015-09-14 15:06 |
|
Status | resolved => reviewed |
2015-09-14 16:16 |
|
Assigned To | bugmaster => mkv |
2015-09-15 11:56 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-09-15 12:37 |
|
Note Added: 0045621 | |
2015-09-15 12:37 |
|
Assigned To | mkv => bugmaster |
2015-09-15 12:37 |
|
Status | reviewed => tested |
2015-09-18 13:31 | bugmaster | Changeset attached | => occt master eeec0986 |
2015-09-18 13:31 | bugmaster | Status | tested => verified |
2015-09-18 13:31 | bugmaster | Resolution | open => fixed |
2015-10-16 14:55 |
|
Status | verified => closed |
2015-10-16 16:37 | git | Note Added: 0046978 | |
2015-10-23 20:50 |
|
Fixed in Version | => 6.9.1 |
2015-12-13 13:29 | Roman Lygin | Relationship added | related to 0026989 |